==> JLU-Automation-Team/Electronics-Design-Contest/stm32f103zet6传感器资料/OLED屏幕/0.96inch_SPI_OLED_Module_SSD1306_MSP096X_V1.0/1-Demo/Demo_STM32/0.96inch_OLED_Demo_STM32F767IGT6_Software_4-wire_SPI/HARDWARE/OLED/oled.c <==
#include "oled.h"
#include "stdlib.h"
#include "string.h"
#include "delay.h"
#include "spi.h"

void OLED_Init_GPIO(void)
{
		GPIO_InitTypeDef GPIO_Initure;  
    __HAL_RCC_GPIOD_CLK_ENABLE();           //使能GPIOD时钟 
    __HAL_RCC_GPIOB_CLK_ENABLE();           //使能GPIOB时钟 
		GPIO_Initure.Pin=GPIO_PIN_5|GPIO_PIN_11|GPIO_PIN_12; //GPIOD5,11,12 
    GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
    GPIO_Initure.Pull=GPIO_PULLUP;          //上拉
    GPIO_Initure.Speed=GPIO_SPEED_HIGH;     //快速         
    HAL_GPIO_Init(GPIOD,&GPIO_Initure);     //初始化GPIOD5,11,12
		
		GPIO_Initure.Pin=GPIO_PIN_13|GPIO_PIN_15; //GPIOB13,15
		GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
    GPIO_Initure.Pull=GPIO_PULLUP;          //上拉
    GPIO_Initure.Speed=GPIO_SPEED_HIGH;     //快速 
		HAL_GPIO_Init(GPIOB,&GPIO_Initure);     //初始化GPIOB13,15
}
